--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -31,11 +31,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/fill_blanks"
-                android:alpha="0.2"/>
+                android:alpha="0.1"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="@string/game_1_content"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -82,11 +83,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/image_pick"
-                android:alpha="0.2"/>
+                android:alpha="0.1"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="@string/game_2_content"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
