--- a/app/src/main/res/layout/activity_game_exploration.xml
+++ b/app/src/main/res/layout/activity_game_exploration.xml
@@ -18,35 +18,64 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/exploration_image_1"
                 android:layout_column="1"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:cropToPadding="false"
+                android:paddingBottom="50dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="50dp"
+                android:scaleType="fitCenter" />
 
             <ImageView
                 android:id="@+id/exploration_image_2"
                 android:layout_column="2"
                 android:layout_weight="1"
-                />
+                android:adjustViewBounds="true"
+                android:cropToPadding="false"
+                android:paddingBottom="50dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="50dp"
+                android:scaleType="fitCenter" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/exploration_image_3"
                 android:layout_column="1"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:cropToPadding="false"
+                android:paddingBottom="50dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="50dp"
+                android:scaleType="fitCenter" />
 
             <ImageView
                 android:id="@+id/exploration_image_4"
                 android:layout_column="2"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:cropToPadding="false"
+                android:paddingBottom="50dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="50dp"
+                android:scaleType="fitCenter" />
         </TableRow>
 
     </TableLayout>
